k8/gb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  type: NodePort
  selector:
    app: guestbook
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30036
    protocol: TCP
