k8/gb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gb-ingress
  labels:
    name: gb-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: guestbook
            port: 
              number: 80
